--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/BrianLoveGa/project-2-cheerupApp.git"
   },
-  "author": "Brian Loveless",
+  "author": "Brian W Loveless",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/BrianLoveGa/project-2-cheerupApp/issues"
