--- a/package.json
+++ b/package.json
@@ -17,18 +17,48 @@
   },
   "homepage": "https://github.com/BrianLoveGa/project-2-cheerupApp#readme",
   "dependencies": {
+    "align-text": "^1.0.2",
+    "amdefine": "^1.0.1",
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "buffer-crc32": "^0.2.13",
+    "center-align": "^1.0.1",
     "chai": "^4.2.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "ejs": "^2.7.1",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.16.2",
     "hbs": "^4.0.5",
+    "lazy-cache": "^2.0.2",
     "lodash": "^4.17.15",
+    "lodash.get": "^4.4.2",
     "method-override": "^3.0.0",
+    "mime": "^2.4.4",
     "mocha": "^6.2.1",
     "mongo": "^0.1.0",
     "mongoose": "^5.7.3",
+    "morgan": "^1.9.1",
     "nodemon": "^1.19.3",
-    "supertest": "^4.0.2"
+    "oauth": "^0.9.15",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-oauth1": "^1.1.0",
+    "passport-oauth2": "^1.5.0",
+    "passport-strategy": "^1.0.0",
+    "pkginfo": "^0.4.1",
+    "right-align": "^0.1.3",
+    "supertest": "^4.0.2",
+    "uglify-to-browserify": "^2.1.0",
+    "window-size": "^1.1.1",
+    "xmldom": "^0.1.27",
+    "xtraverse": "^0.1.0",
+    "yargs": "^14.2.0"
   }
 }
