trying passport another way

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "buffer-crc32": "^0.2.13",
     "center-align": "^1.0.1",
@@ -32,7 +33,10 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-handlebars": "^3.1.0",
+    "express-messages": "^1.0.1",
     "express-session": "^1.16.2",
+    "express-validator": "^6.2.0",
     "hbs": "^4.0.5",
     "lazy-cache": "^2.0.2",
     "lodash": "^4.17.15",
@@ -41,6 +45,7 @@
     "mime": "^2.4.4",
     "mocha": "^6.2.1",
     "mongo": "^0.1.0",
+    "mongodb": "^3.3.2",
     "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.3",
@@ -48,6 +53,7 @@
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^2.0.0",
+    "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "passport-oauth1": "^1.1.0",
     "passport-oauth2": "^1.5.0",
