--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
+    "cookie": "^0.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "hbs": "^4.0.5",
